[tool.poetry]
name = "cheeseball-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
tinydb = "^4.4.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
editdistance = "^0.5.3"
flask = "^1.1.2"
praw = "^7.2.0"
prsaw = "^0.2.0"
timeago = "^1.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
